--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -1,19 +1,21 @@
 <div class="row">
-  <div class="col-md-6">
-    <h3>First half</h3>
+  <div class="col-md-8">
+    <h3>Lessons</h3>
     <table class="table table-striped">
       <tr> <td>08:30</td>  <td>Zoom opens</td></tr>
       <tr> <td>09:00</td>  <td>Zoom Carpentry Intro</td></tr>   
-      <tr> <td>09:00</td>  <td>Automating Tasks with the Unix Shell</td> </tr>
-      <tr> <td>10:30</td>  <td>Morning break</td> </tr>
-      <tr> <td>11:00</td>  <td>Automating Tasks with the Unix Shell (Continued)</td> </tr>
-      <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Building Programs with Python</td> </tr>
-      <tr> <td>14:30</td>  <td>Afternoon break</td> </tr>
-      <tr> <td>15:00</td>  <td>Building Programs with Python (Continued)</td> </tr>
-      <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
+      <tr> <td>09:20</td>  <td>Introducing the Shell</td> </tr>
+      <tr> <td>09:25</td>  <td>Navigating Files and Directories</td> </tr>
+      <tr> <td>09:55</td>  <td>Break</td> </tr>
+      <tr> <td>10:00</td>  <td>Working with Files and Directories</td> </tr>
+      <tr> <td>10:40</td>  <td>Pipes and Filters</td> </tr>
+      <tr> <td>11:05</td>  <td>Break</td> </tr>
+      <tr> <td>11:10</td>  <td>Loops</td> </tr>
+      <tr> <td>11:40</td>  <td>Shell Scripts</td></tr>
+      <tr> <td>11:55</td>  <td>Projected End Time</td> </tr>
     </table>
   </div>
+<!--  
   <div class="col-md-6">
     <h3>Second half</h3>
     <table class="table table-striped">
@@ -29,4 +31,5 @@
       <tr> <td>16:40</td>  <td>END</td></tr>
     </table>
   </div>
+-->
 </div>
