--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -4,17 +4,18 @@
     <table class="table table-striped">
       <tr> <td>08:30</td>  <td>Zoom opens</td></tr>
       <tr> <td>09:00</td>  <td>Zoom Carpentry Intro</td></tr>   
-      <tr> <td>09:20</td>  <td>Introducing the Shell</td> </tr>
-      <tr> <td>09:25</td>  <td>Navigating Files and Directories</td> </tr>
+      <tr> <td>09:20</td>  <td><a href="https://swcarpentry.github.io/shell-novice/01-intro/index.html">Introducing the Shell</a></td></tr>
+      <tr> <td>09:25</td>  <td><a href="https://swcarpentry.github.io/shell-novice/02-filedir/index.html">Navigating Files and Directories</a></td></tr>
       <tr> <td>09:55</td>  <td>Break</td> </tr>
-      <tr> <td>10:00</td>  <td>Working with Files and Directories</td> </tr>
-      <tr> <td>10:40</td>  <td>Pipes and Filters</td> </tr>
+      <tr> <td>10:00</td>  <td><a href="https://swcarpentry.github.io/shell-novice/03-create/index.html">Working with Files and Directories</a></td></tr>
+      <tr> <td>10:40</td>  <td><a href="https://swcarpentry.github.io/shell-novice/04-pipefilter/index.html">Pipes and Filters</a></td></tr>
       <tr> <td>11:05</td>  <td>Break</td> </tr>
-      <tr> <td>11:10</td>  <td>Loops</td> </tr>
-      <tr> <td>11:40</td>  <td>Shell Scripts</td></tr>
-      <tr> <td>11:55</td>  <td>Projected End Time</td> </tr>
+      <tr> <td>11:10</td>  <td><a href="https://swcarpentry.github.io/shell-novice/05-loop/index.html">Loops</a></td></tr>
+      <tr> <td>11:40</td>  <td><a href="https://swcarpentry.github.io/shell-novice/06-script/index.html">Shell Scripts</a></td></tr>
+      <tr> <td>11:55</td>  <td>Projected End Time</td></tr>
     </table>
   </div>
+</div>
 <!--  
   <div class="col-md-6">
     <h3>Second half</h3>
@@ -31,5 +32,5 @@
       <tr> <td>16:40</td>  <td>END</td></tr>
     </table>
   </div>
--->
 </div>
+-->
