fix typo causing 404

--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -4,11 +4,11 @@
     <table class="table table-striped">
       <tr> <td>08:30</td>  <td>Zoom opens</td></tr>
       <tr> <td>09:00</td>  <td>Zoom Carpentry Intro</td></tr>   
-      <tr> <td>09:20</td>  <td><a href="./01-intro/">Introducing the Shell</a></td></tr>
-      <tr> <td>09:25</td>  <td><a href="./02-filedir">Navigating Files and Directories</a></td></tr>
+      <tr> <td>09:20</td>  <td><a href="01-intro">Introducing the Shell</a></td></tr>
+      <tr> <td>09:25</td>  <td><a href="02-filedir">Navigating Files and Directories</a></td></tr>
       <tr> <td>09:55</td>  <td>Break</td> </tr>
-      <tr> <td>10:00</td>  <td><a href="./03-create">Working with Files and Directories</a></td></tr>
-      <tr> <td>10:40</td>  <td><a href="04-pipfilter">Pipes and Filters</a></td></tr>
+      <tr> <td>10:00</td>  <td><a href="03-create">Working with Files and Directories</a></td></tr>
+      <tr> <td>10:40</td>  <td><a href="04-pipefilter">Pipes and Filters</a></td></tr>
       <tr> <td>11:05</td>  <td>Break</td> </tr>
       <tr> <td>11:10</td>  <td><a href="05-loop">Loops</a></td></tr>
       <tr> <td>11:40</td>  <td><a href="06-script">Shell Scripts</a></td></tr>
